--- a/data/posts/react.mdx
+++ b/data/posts/react.mdx
@@ -5,6 +5,48 @@ image: 'react.png'
 
 # edit: true
 
+courses: [{  
+
+    "href": "https://www.youtube.com/playlist?list=PLtFbQRDJ11kEjXWZmwkOV-vfXmrEEsuEW",  
+    "title": "اساسيات react",
+    "mr": "حمزة نبيل", 
+
+}, {  
+
+    "href": "https://www.youtube.com/playlist?list=PL1FWK-sgJ9el-axKTMU_1l5PEyv7tn-wk",  
+    "title": "ReactJS من الصفر إلى الإحتراف",
+    "mr": "بشير شلاح", 
+
+},  {  
+
+    "href": "https://www.youtube.com/playlist?list=PLPTNqXpQ2tbhYmCeh8H4TR_UokYUxhD8R",  
+    "title": "رياكت بتتكلم عربي",
+    "mr": "نور حمصي", 
+
+},  {  
+
+    "href": "https://www.youtube.com/playlist?list=PL1FWK-sgJ9elLBrEyAXK74pM37lJtDzut",  
+    "title": "React Hooks - شرح عربي",
+    "mr": "بشير شلاح", 
+
+},  {  
+
+    "href": "https://www.youtube.com/playlist?list=PLtFbQRDJ11kFPIchLt4xI6sBVxFUK1PBD",  
+    "title": "اساسيات redux",
+    "mr": "حمزة نبيل", 
+
+},  {  
+
+    "href": "https://www.youtube.com/playlist?list=PL1FWK-sgJ9emg4u0GSQMhY5AFVjd9MHim)",  
+    "title": "redux",
+    "mr": "بشير شلاح", 
+
+}, 
+]
+ 
+
+ 
+
 ---  
 هي مكتبة JavaScript لبناء واجهات المستخدم. وهي تركز بشكل أساسي على بناء مكونات واجهة مستخدم قابلة لإعادة الاستخدام وتستخدم DOM الظاهري (نموذج كائن المستند) لتحسين الأداء عن طريق تقليل عدد التغييرات التي تم إجراؤها على DOM الفعلي. كما يسمح بالتكامل السهل مع المكتبات والأطر الأخرى. 
  
@@ -26,7 +68,7 @@ image: 'react.png'
 * react hooks 
 * redux
 
-## مصادر التعلم
+<!-- ## مصادر التعلم
 * بداية تعلم اساسيات  **react**
 
     [اساسيات react](https://www.youtube.com/playlist?list=PLtFbQRDJ11kEjXWZmwkOV-vfXmrEEsuEW) - حمزة نبيل
@@ -44,7 +86,7 @@ image: 'react.png'
     [اساسيات redux](https://www.youtube.com/playlist?list=PLtFbQRDJ11kFPIchLt4xI6sBVxFUK1PBD) - حمزة نبيل
 
     [redux](https://www.youtube.com/playlist?list=PL1FWK-sgJ9emg4u0GSQMhY5AFVjd9MHim) - بشير شلاح
- 
+  -->
 
 ## تقنيات مساعدة 
 
