--- a/data/dev/angular.mdx
+++ b/data/dev/angular.mdx
@@ -17,7 +17,15 @@ courses: [{
     "mr": "بشير شلاح",
     "note":"كورس سريع " 
 
-}]
+}, {  
+
+    "href": "https://www.youtube.com/playlist?list=PLwSrRLfx1DYJgrYJEQocAee-KDDd-cs7L",  
+    "title": "Angular كورس شرح",
+    "mr": "Yolio",
+    "note":"كورس سريع " 
+
+}
+]
 
 # edit: true
 
