--- a/data/dev/react.mdx
+++ b/data/dev/react.mdx
@@ -88,12 +88,11 @@ courses: [{
     [redux](https://www.youtube.com/playlist?list=PL1FWK-sgJ9emg4u0GSQMhY5AFVjd9MHim) - بشير شلاح
   -->
 
-## تقنيات مساعدة 
+**تقنيات مساعدة**  
 
 * Sass/scss / styled component 
 * Comment line
-
-## المستوى المتقدم  
+**المستوى المتقدم**  
 * typeScript 
 
     [typeScript](https://www.youtube.com/playlist?list=PLtFbQRDJ11kH1RHmJD7DYtV9RXY42Al5g) - حمزة نبيل
