--- a/data/dev/web-basics.mdx
+++ b/data/dev/web-basics.mdx
@@ -121,9 +121,9 @@ image: 'web-basics.png'
 
  معنا مثلا ان تتعلم `react` وبعد احترافها سوف تكون عليك `nodejs` سهلة بامكانك تعلمها بسرعة مع اطار عمل `expressjs` , بعد وصولك هذه المرحلة وبعد التجارب العملية نعتبرك درست `fullstack` ولاكن يجب عليك الممارسة اكثر لكي تكون محترف في هذا الاختصاص
 
-## المقالات المفيدة لك لتستمر
+<!-- ## المقالات المفيدة لك لتستمر
 
 * اختيار مسار الويب الانسب لك 
 * الاستضافات المجانية 
 
- _`قريبا سوف تتوفر هذه المقالات`_
+ _`قريبا سوف تتوفر هذه المقالات`_ -->
