--- a/data/dev/web-dev.mdx
+++ b/data/dev/web-dev.mdx
@@ -50,21 +50,21 @@ image: 'web-dev.png'
 
 اختر تخصصك 
 
-**[Back end](backend)** : 
-
- هو الجزء الخلفي من الموقع الإلكتروني أو التطبيق الشبكي، وهو الجزء الذي يتحكم في الخدمات الخلفية التي يتطلبها الموقع أو التطبيق، مثل التخزين الإلكتروني، التحكم في الإشارات، التحليل، الإجراءات الداخلية، التحقق من الصلاحية، الإجابة على الطلبات الخلفية،إلخ.
-
 **[Front end](frontend)** : 
 
  هو الجزء الأمامي من الموقع الإلكتروني أو التطبيق الشبكي، وهو الجزء الذي يخدم المستخدم الذي يتصفح الموقع أو التطبيق، كالتصميم الجذاب، التحكم في الإشارات، التفاعلات، الإجراءات الأمامية، التحقق من الصلاحية، الإجابة على الطلبات الأمامية،إلخ.
+
+**[Back end](backend)** : 
+
+ هو الجزء الخلفي من الموقع الإلكتروني أو التطبيق الشبكي، وهو الجزء الذي يتحكم في الخدمات الخلفية التي يتطلبها الموقع أو التطبيق، مثل التخزين الإلكتروني، التحكم في الإشارات، التحليل، الإجراءات الداخلية، التحقق من الصلاحية، الإجابة على الطلبات الخلفية،إلخ.
 
 **[Full Stack web developer](full-stack-web)** :
  
   هو المطور الذي يمتلك مهارات في الجزء الخلفي والجزء الأمامي من الموقع الإلكتروني أو التطبيق الشبكي، هذا يعني القدرة على العمل في الجزء الخلفي مثل كتابة الشيء الداخلي للتطبيق والجزء الأمامي مثل التصميم الجذاب للتطبيق .
 
-## المقالات المفيدة لك لتستمر
+<!-- ## المقالات المفيدة لك لتستمر
 
 * مسار الفريلانس
 * طرق الربح من مشروعي
 
-    ``قريبا سوف تتوفر هذه المقالات``
+    ``قريبا سوف تتوفر هذه المقالات`` -->
