--- a/data/dev/code-and-jobs.mdx
+++ b/data/dev/code-and-jobs.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'مجالات البرمجة ٢٠٢٣ ومستقبل الوضائف'
 date: '2023-02-14'
-image: 'backend.png'
+image: 'code-and-jobs.png'
 ---
 
 البرمجة اصبحت شي مهم حيث انها تدخل بكل شياء من الهواتف للغسلات و التلفزيونات و السيارات و غيرها الكثير ولا يكمن الاستغناء عنها و من الواجب الاستفادة من هذه العلم و ان لا نكون اخر من يلتحق به .
@@ -13,7 +13,7 @@ image: 'backend.png'
 1. برمجة وتصميم واجهات المواقع: حيث انك تقوم بتصميم وبرمجة مواقع وتطبيقات الويب  من جانب المستخدم .
 2. برمجة تطبيقات الموبايل: فهي مجالها واسع وبها خيارات متعددة سواء كنت تريد برمجة تطبيق يعمل على الاندرويد او ios 
 3. برمجة back-end: التعامل مع قواعد البيانات و معالجة الملفات على السيرفرات وبناء api للمواقع او التطبيقات .
-4. برمجة المتحكمات : برمجة الاجهزة الالكترونية سواء كان اجهزة طبية او اجهزة مخصصة لوضائف معينة مثل الربوتات او الاجهزة التي تعلمل بالمعامل و الكثير من القطعات تعمل به سواء للاستخدام العسكري او الشخصي او الصناعي او الطبي .وهو مجال ينمو بشكل كبير بسبب تطور سراعات الاتصال بالانترنت و تطور الواسع في المتحكمات و الذكاء الصناعي .
+4. برمجة المتحكمات : برمجة الاجهزة الالكترونية سواء كان اجهزة طبية او اجهزة مخصصة لوضائف معينة مثل الربوتات او الاجهزة التي تعمل بالمعامل و الكثير من القطاعات تعمل به سواء للاستخدام العسكري او الشخصي او الصناعي او الطبي .وهو مجال ينمو بشكل كبير بسبب تطور سراعات الاتصال بالانترنت و تطور الواسع في المتحكمات و الذكاء الصناعي .
 5. الذكاء الصناعي : وهو مجال واعد ولايزال في مرحلة مبكرة في عالمنا العربي وتتجه له الكثير من الشركات .
 
 ## مستقبل الوضائف 
