--- a/data/dev/code-and-jobs.mdx
+++ b/data/dev/code-and-jobs.mdx
@@ -10,11 +10,16 @@ image: 'code-and-jobs.png'
 
 ## مجالات البرمجة الاهم بالنسبة للفرق الصغيرة و الافراد
 
-1. برمجة وتصميم واجهات المواقع: حيث انك تقوم بتصميم وبرمجة مواقع وتطبيقات الويب  من جانب المستخدم .
-2. برمجة تطبيقات الموبايل: فهي مجالها واسع وبها خيارات متعددة سواء كنت تريد برمجة تطبيق يعمل على الاندرويد او ios 
-3. برمجة back-end: التعامل مع قواعد البيانات و معالجة الملفات على السيرفرات وبناء api للمواقع او التطبيقات .
-4. برمجة المتحكمات : برمجة الاجهزة الالكترونية سواء كان اجهزة طبية او اجهزة مخصصة لوضائف معينة مثل الربوتات او الاجهزة التي تعمل بالمعامل و الكثير من القطاعات تعمل به سواء للاستخدام العسكري او الشخصي او الصناعي او الطبي .وهو مجال ينمو بشكل كبير بسبب تطور سراعات الاتصال بالانترنت و تطور الواسع في المتحكمات و الذكاء الصناعي .
-5. الذكاء الصناعي : وهو مجال واعد ولايزال في مرحلة مبكرة في عالمنا العربي وتتجه له الكثير من الشركات .
+* **برمجة وتصميم واجهات المواقع**\
+ حيث انك تقوم بتصميم وبرمجة مواقع وتطبيقات الويب  من جانب المستخدم .
+* **برمجة تطبيقات الموبايل**\
+ فهي مجالها واسع وبها خيارات متعددة سواء كنت تريد برمجة تطبيق يعمل على الاندرويد او ios 
+* **برمجة back-end**\
+ التعامل مع قواعد البيانات و معالجة الملفات على السيرفرات وبناء api للمواقع او التطبيقات .
+* **برمجة المتحكمات**\
+ برمجة الاجهزة الالكترونية سواء كان اجهزة طبية او اجهزة مخصصة لوضائف معينة مثل الربوتات او الاجهزة التي تعمل بالمعامل و الكثير من القطاعات تعمل به سواء للاستخدام العسكري او الشخصي او الصناعي او الطبي .وهو مجال ينمو بشكل كبير بسبب تطور سراعات الاتصال بالانترنت و تطور الواسع في المتحكمات و الذكاء الصناعي .
+* **الذكاء الصناعي**\
+ وهو مجال واعد ولايزال في مرحلة مبكرة في عالمنا العربي وتتجه له الكثير من الشركات .
 
 ## مستقبل الوضائف 
 
@@ -25,4 +30,4 @@ image: 'code-and-jobs.png'
 
 ## الخلاصة
 
-عالمنا يتطور بسرعة و البرمجة ليست حكر على المهندسين و عليكم تعلم مجالات تطور من عمالك سواء برمجة او تصميم او تسويق. و هذا التخلي عن الوضائف ليس بهذا السرعة و انتشر في عالمنا العربي  يستلزم وقت اكثر لان هذا يبداء مع الدول المتطورة تكنلوجيا و يتطلب وصولها الينا وقت اطول و مع وصولها الينا يستلزم فترة ليست بقصيرة. و بهذا الوقت تكون انت قد تعلمت مجال جديد والا من الممكن انك لا تعثر على وضيفة تساوي وضيفتك السابقة
+عالمنا يتطور بسرعة و البرمجة ليست حكر على المهندسين و عليكم تعلم مجالات تطور من عمالكم سواء برمجة او تصميم او تسويق. و هذا التخلي عن الوضائف ليس بهذا السرعة و انتشر في عالمنا العربي  يستلزم وقت اكثر لان هذا يبداء مع الدول المتطورة تكنلوجيا و يتطلب وصولها الينا وقت اطول و مع وصولها الينا يستلزم فترة ليست بقصيرة. و بهذا الوقت تكون انت قد تعلمت مجال جديد والا من الممكن انك لا تعثر على وضيفة تساوي وضيفتك السابقة
